--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+body{
+  background-color: #212529 !important;
+  min-height: 100vh;
+  }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
